going back to scheduler