@@ -4,15 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dk.ku.di.dms.vms</groupId>
   <artifactId>sidecar</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-    <parent>
-        <groupId>dk.ku.di.dms.vms</groupId>
-        <artifactId>vms-runtime-java</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>dk.ku.di.dms.vms</groupId>
+    <artifactId>vms-runtime-java</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
   <name>sidecar</name>
   <!-- FIXME change it to the project's website -->
@@ -53,16 +52,24 @@
 <!--      </dependency>-->
 
     <dependency>
-      <groupId>dk.di.ku.dms.vms</groupId>
-      <artifactId>modb</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+        <groupId>dk.di.ku.dms.vms</groupId>
+        <artifactId>modb</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>dk.ku.di.dms.vms</groupId>
+        <artifactId>web_common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <scope>compile</scope>
     </dependency>
 
   </dependencies>
 
-<!--  <build>-->
-<!--    <plugins>-->
+  <build>
+    <plugins>
+<!--        -->
 <!--      <plugin>-->
 <!--        <groupId>org.codehaus.mojo</groupId>-->
 <!--        <artifactId>exec-maven-plugin</artifactId>-->
@@ -74,7 +81,22 @@
 <!--          <mainClass>org.example.HelloWorld</mainClass>-->
 <!--        </configuration>-->
 <!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
+
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.7.0</version>
+            <configuration>
+                <source>18</source>
+                <target>18</target>
+                <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>jdk.incubator.foreign</arg>
+                </compilerArgs>
+            </configuration>
+        </plugin>
+
+
+    </plugins>
+  </build>
 
 </project>
